--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container">
-     <div class="row justify-content-center">
+     <div class="row justify-content-center p-3">
        <div class="col-lg-4 col-md-8 col-sm-12 content mt-5 pt-1" style="box-shadow: 0 0 10px grey; padding: 0; border-radius: 30px; background-color:white;">
        <div class="col-lg-12 pl-5 pt-3 pr-4"><h3 class="font-weight-bold">SI-PDNS</h3>
         <p>Sistem Informasi Pengolahan Data Nilai Siswa</p></div>
